@@ -16,11 +16,11 @@ my $worker = $minion->repair->worker;
 isa_ok $worker->minion->app, 'Mojolicious', 'has default application';
 
 # Migrate up and down
-is $minion->backend->sqlite->migrations->active, 4, 'active version is 4';
+is $minion->backend->sqlite->migrations->active, 5, 'active version is 5';
 is $minion->backend->sqlite->migrations->migrate(0)->active, 0,
   'active version is 0';
-is $minion->backend->sqlite->migrations->migrate->active, 4,
-  'active version is 4';
+is $minion->backend->sqlite->migrations->migrate->active, 5,
+  'active version is 5';
 
 # Register and unregister
 $worker->register;
@@ -562,16 +562,24 @@ $job    = $worker->dequeue(0);
 $job2   = $worker->dequeue(0);
 my $job3 = $worker->dequeue(0);
 my $job4 = $worker->dequeue(0);
-$pid  = $job->start;
+$pid = $job->start;
 my $pid2 = $job2->start;
 my $pid3 = $job3->start;
 my $pid4 = $job4->start;
 my ($first, $second, $third, $fourth);
-usleep 50000
-  until $first ||= $job->is_finished($pid)
-  and $second  ||= $job2->is_finished($pid2)
-  and $third   ||= $job3->is_finished($pid3)
-  and $fourth  ||= $job4->is_finished($pid4);
+if (eval { Minion->VERSION('6.0'); 1 }) {
+  usleep 50000
+    until $first ||= $job->is_finished
+    and $second  ||= $job2->is_finished
+    and $third   ||= $job3->is_finished
+    and $fourth  ||= $job4->is_finished;
+} else {
+  usleep 50000
+    until $first ||= $job->is_finished($pid)
+    and $second  ||= $job2->is_finished($pid2)
+    and $third   ||= $job3->is_finished($pid3)
+    and $fourth  ||= $job4->is_finished($pid4);
+}
 is $minion->job($id)->info->{state}, 'finished', 'right state';
 is_deeply $minion->job($id)->info->{result}, {added => 21}, 'right result';
 is $minion->job($id2)->info->{state}, 'finished', 'right state';
@@ -582,6 +590,24 @@ is $minion->job($id4)->info->{state},  'failed',   'right state';
 is $minion->job($id4)->info->{result}, 'Non-zero exit status (1)',
   'right result';
 $worker->unregister;
+
+SKIP: {
+  skip 'Job stop and pid methods require Minion 6.0', 4
+    unless eval { Minion->VERSION('6.0'); 1 };
+  
+  # Stopping jobs
+  $minion->add_task(long_running => sub { sleep 1000 });
+  $worker = $minion->worker->register;
+  $minion->enqueue('long_running');
+  $job = $worker->dequeue(0);
+  ok $job->start->pid, 'has a process id';
+  ok !$job->is_finished, 'job is not finished';
+  $job->stop;
+  usleep 5000 until $job->is_finished;
+  is $job->info->{state}, 'failed', 'right state';
+  like $job->info->{result}, qr/Non-zero exit status/, 'right result';
+  $worker->unregister;
+}
 
 # Job dependencies
 $worker = $minion->remove_after(0)->worker->register;
@@ -624,6 +650,40 @@ like $minion->job($id)->info->{finished}, qr/^[\d.]+$/,
 is $minion->job($id)->info->{state},  'failed',           'right state';
 is $minion->job($id)->info->{result}, 'Parent went away', 'right result';
 $worker->unregister;
+
+SKIP: {
+  skip 'Worker process_commands method requires Minion 6.0', 8
+    unless eval { Minion->VERSION('6.0'); 1 };
+  
+  # Worker remote control commands
+  $worker  = $minion->worker->register->process_commands;
+  $worker2 = $minion->worker->register;
+  my @commands;
+  $_->add_command(test_id => sub { push @commands, shift->id })
+    for $worker, $worker2;
+  $worker->add_command(test_args => sub { shift and push @commands, [@_] })
+    ->register;
+  ok $minion->backend->broadcast('test_id', [], [$worker->id]), 'sent command';
+  ok $minion->backend->broadcast('test_id', [], [$worker->id, $worker2->id]),
+    'sent command';
+  $worker->process_commands->register;
+  $worker2->process_commands;
+  is_deeply \@commands, [$worker->id, $worker->id, $worker2->id],
+    'right structure';
+  @commands = ();
+  ok $minion->backend->broadcast('test_id'),       'sent command';
+  ok $minion->backend->broadcast('test_whatever'), 'sent command';
+  ok $minion->backend->broadcast('test_args', [23], []), 'sent command';
+  ok $minion->backend->broadcast('test_args', [1, [2], {3 => 'three'}],
+    [$worker->id]),
+    'sent command';
+  $_->process_commands for $worker, $worker2;
+  is_deeply \@commands,
+    [$worker->id, [23], [1, [2], {3 => 'three'}], $worker2->id],
+    'right structure';
+  $_->unregister for $worker, $worker2;
+  ok !$minion->backend->broadcast('test_id', []), 'command not sent';
+}
 
 $minion->reset;
 
